[gd_scene load_steps=8 format=3 uid="uid://d3lw47lfofslh"]

[ext_resource type="Script" path="res://mario/power_star.gd" id="1_u4xin"]
[ext_resource type="Shader" path="res://EnvironmentMap.gdshader" id="2_savh8"]
[ext_resource type="Texture2D" uid="uid://cwt81cb746m7q" path="res://mario/env_map_shiny_blurry.png" id="3_awppy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_658mp"]
render_priority = 0
shader = ExtResource("2_savh8")
shader_parameter/albedo = Color(0.729412, 0.611765, 0.345098, 0.392157)
shader_parameter/albedo_texture = ExtResource("3_awppy")

[sub_resource type="ArrayMesh" id="ArrayMesh_23ag4"]
_surfaces = [{
"aabb": AABB(-0.475528, -0.135488, -0.5, 0.951057, 0.270975, 0.904508),
"format": 34896613377,
"index_count": 60,
"index_data": PackedByteArray(10, 0, 1, 0, 0, 0, 10, 0, 2, 0, 1, 0, 10, 0, 3, 0, 2, 0, 10, 0, 4, 0, 3, 0, 10, 0, 5, 0, 4, 0, 10, 0, 6, 0, 5, 0, 10, 0, 7, 0, 6, 0, 10, 0, 8, 0, 7, 0, 10, 0, 9, 0, 8, 0, 10, 0, 0, 0, 9, 0, 11, 0, 0, 0, 1, 0, 2, 0, 11, 0, 1, 0, 11, 0, 2, 0, 3, 0, 4, 0, 11, 0, 3, 0, 5, 0, 11, 0, 4, 0, 11, 0, 5, 0, 6, 0, 7, 0, 11, 0, 6, 0, 11, 0, 7, 0, 8, 0, 11, 0, 8, 0, 9, 0, 0, 0, 11, 0, 9, 0),
"lods": [0.0994835, PackedByteArray(10, 0, 5, 0, 1, 0, 10, 0, 7, 0, 5, 0, 10, 0, 9, 0, 7, 0, 10, 0, 1, 0, 9, 0, 5, 0, 11, 0, 1, 0, 11, 0, 5, 0, 7, 0, 11, 0, 7, 0, 9, 0, 1, 0, 11, 0, 9, 0), 0.158132, PackedByteArray(10, 0, 5, 0, 1, 0, 5, 0, 11, 0, 1, 0, 11, 0, 5, 0, 10, 0, 1, 0, 11, 0, 10, 0)],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray(255, 127, 255, 127, 0, 0, 0, 0, 147, 91, 255, 127, 204, 88, 0, 0, 0, 0, 255, 127, 200, 97, 0, 0, 16, 69, 255, 127, 165, 161, 0, 0, 228, 48, 255, 127, 255, 255, 0, 0, 255, 127, 255, 127, 170, 206, 0, 0, 26, 207, 255, 127, 255, 255, 0, 0, 238, 186, 255, 127, 165, 161, 0, 0, 255, 255, 255, 127, 200, 97, 0, 0, 107, 164, 255, 127, 204, 88, 0, 0, 255, 127, 255, 255, 130, 141, 0, 0, 255, 127, 0, 0, 130, 141, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_uwwu3"]
resource_name = "level1_ref_Circle"
_surfaces = [{
"aabb": AABB(-0.475528, -0.135488, -0.5, 0.951057, 0.270975, 0.904508),
"attribute_data": PackedByteArray(255, 127, 0, 0, 147, 91, 204, 88, 0, 0, 200, 97, 16, 69, 165, 161, 228, 48, 255, 255, 255, 127, 170, 206, 26, 207, 255, 255, 238, 186, 165, 161, 255, 255, 200, 97, 107, 164, 204, 88, 255, 127, 130, 141, 255, 127, 130, 141, 147, 91, 204, 88, 147, 91, 204, 88, 147, 91, 204, 88, 255, 127, 170, 206, 255, 127, 170, 206, 255, 127, 170, 206, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 147, 91, 204, 88, 147, 91, 204, 88, 147, 91, 204, 88, 147, 91, 204, 88, 255, 127, 170, 206, 255, 127, 170, 206, 255, 127, 170, 206, 255, 127, 170, 206, 238, 186, 165, 161, 238, 186, 165, 161, 238, 186, 165, 161, 238, 186, 165, 161, 107, 164, 204, 88, 107, 164, 204, 88, 107, 164, 204, 88, 107, 164, 204, 88, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141, 255, 127, 130, 141),
"format": 34896613399,
"index_count": 60,
"index_data": PackedByteArray(10, 0, 1, 0, 0, 0, 10, 0, 2, 0, 1, 0, 10, 0, 3, 0, 2, 0, 10, 0, 4, 0, 3, 0, 10, 0, 5, 0, 4, 0, 10, 0, 6, 0, 5, 0, 10, 0, 7, 0, 6, 0, 10, 0, 8, 0, 7, 0, 10, 0, 9, 0, 8, 0, 10, 0, 0, 0, 9, 0, 11, 0, 0, 0, 1, 0, 2, 0, 11, 0, 1, 0, 11, 0, 2, 0, 3, 0, 4, 0, 11, 0, 3, 0, 5, 0, 11, 0, 4, 0, 11, 0, 5, 0, 6, 0, 7, 0, 11, 0, 6, 0, 11, 0, 7, 0, 8, 0, 11, 0, 8, 0, 9, 0, 0, 0, 11, 0, 9, 0),
"lods": [0.0994835, PackedByteArray(40, 0, 28, 0, 24, 0, 41, 0, 32, 0, 29, 0, 42, 0, 36, 0, 33, 0, 43, 0, 25, 0, 37, 0, 30, 0, 44, 0, 26, 0, 45, 0, 31, 0, 34, 0, 46, 0, 35, 0, 38, 0, 27, 0, 47, 0, 39, 0), 0.158132, PackedByteArray(18, 0, 15, 0, 12, 0, 16, 0, 21, 0, 13, 0, 22, 0, 17, 0, 19, 0, 14, 0, 23, 0, 20, 0)],
"material": SubResource("ShaderMaterial_658mp"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(255, 127, 255, 127, 0, 0, 0, 0, 147, 91, 255, 127, 204, 88, 160, 4, 0, 0, 255, 127, 200, 97, 236, 13, 16, 69, 255, 127, 165, 161, 23, 63, 228, 48, 255, 127, 255, 255, 199, 101, 255, 127, 255, 127, 170, 206, 254, 127, 26, 207, 255, 127, 255, 255, 199, 101, 238, 186, 255, 127, 165, 161, 23, 63, 255, 255, 255, 127, 200, 97, 236, 13, 107, 164, 255, 127, 204, 88, 45, 8, 255, 127, 255, 255, 130, 141, 255, 191, 255, 127, 0, 0, 130, 141, 255, 63, 147, 91, 255, 127, 204, 88, 157, 56, 147, 91, 255, 127, 204, 88, 56, 56, 147, 91, 255, 127, 204, 88, 190, 6, 255, 127, 255, 127, 170, 206, 18, 80, 255, 127, 255, 127, 170, 206, 248, 85, 255, 127, 255, 127, 170, 206, 207, 96, 255, 127, 255, 255, 130, 141, 111, 186, 255, 127, 255, 255, 130, 141, 85, 177, 255, 127, 255, 255, 130, 141, 115, 233, 255, 127, 0, 0, 130, 141, 71, 73, 255, 127, 0, 0, 130, 141, 208, 84, 255, 127, 0, 0, 130, 141, 5, 18, 147, 91, 255, 127, 204, 88, 123, 55, 147, 91, 255, 127, 204, 88, 145, 37, 147, 91, 255, 127, 204, 88, 89, 53, 147, 91, 255, 127, 204, 88, 105, 24, 255, 127, 255, 127, 170, 206, 134, 80, 255, 127, 255, 127, 170, 206, 4, 90, 255, 127, 255, 127, 170, 206, 6, 81, 255, 127, 255, 127, 170, 206, 233, 94, 238, 186, 255, 127, 165, 161, 96, 62, 238, 186, 255, 127, 165, 161, 221, 54, 238, 186, 255, 127, 165, 161, 122, 63, 238, 186, 255, 127, 165, 161, 244, 48, 107, 164, 255, 127, 204, 88, 43, 26, 107, 164, 255, 127, 204, 88, 160, 32, 107, 164, 255, 127, 204, 88, 161, 28, 107, 164, 255, 127, 204, 88, 154, 27, 255, 127, 255, 255, 130, 141, 180, 183, 255, 127, 255, 255, 130, 141, 60, 181, 255, 127, 255, 255, 130, 141, 158, 200, 255, 127, 255, 255, 130, 141, 248, 207, 255, 127, 0, 0, 130, 141, 82, 69, 255, 127, 0, 0, 130, 141, 16, 75, 255, 127, 0, 0, 130, 141, 254, 48, 255, 127, 0, 0, 130, 141, 172, 44, 255, 255, 255, 127, 84, 43, 208, 143, 231, 64, 16, 147, 188, 96, 181, 181, 248, 120, 86, 227, 255, 127, 255, 255, 86, 99, 7, 7, 182, 53, 66, 31, 16, 19, 23, 63, 78, 26, 192, 76, 255, 255, 255, 127, 0, 0, 255, 127, 201, 248, 26, 103, 218, 43, 86, 127, 144, 149, 241, 4, 117, 236, 136, 147, 169, 23, 168, 151, 202, 96, 53, 31, 34, 243, 219, 140, 60, 208, 61, 80, 48, 200, 49, 72, 226, 20, 226, 148, 8, 58, 247, 69, 123, 71, 131, 56, 120, 253, 84, 151, 21, 230, 235, 84, 231, 42, 50, 127, 74, 47, 165, 110, 63, 228, 190, 155, 35, 241, 36, 113, 34, 27, 34, 155, 150, 13, 104, 114, 153, 213, 223, 13, 80, 59, 162, 1, 179, 39, 205, 57, 113, 50, 96, 63, 197, 221, 176, 106, 103, 219, 167, 153, 170, 7, 72, 85, 224, 23, 245, 180, 86, 236, 168, 147, 136, 244, 136, 116, 61, 226, 62, 98, 237, 253, 16, 130, 23, 20, 22, 148, 179, 14, 76, 113, 1, 30, 254, 97, 239, 3, 238, 131)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_23ag4")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_04itl"]
height = 1.35
radius = 0.85

[node name="PowerStar" type="Node3D"]
script = ExtResource("1_u4xin")

[node name="StarMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 0, 0, 0)
mesh = SubResource("ArrayMesh_uwwu3")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_04itl")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
enabled = false
shape = SubResource("CylinderShape3D_04itl")
target_position = Vector3(0, -0.5, 0)

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
